[gd_scene load_steps=3 format=2]

[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Login.gd" type="Script" id=2]

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="Form" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -477.0
margin_top = -62.0
margin_right = 477.0
margin_bottom = 62.0
rect_min_size = Vector2( 950, 0 )
rect_pivot_offset = Vector2( -877, 203 )

[node name="Email" type="HBoxContainer" parent="Background/Form"]
margin_right = 954.0
margin_bottom = 66.0
rect_min_size = Vector2( 0, 60 )

[node name="EmailLabel" type="Label" parent="Background/Form/Email"]
margin_right = 250.0
margin_bottom = 66.0
rect_min_size = Vector2( 250, 60 )
rect_pivot_offset = Vector2( 291, 531 )
text = "Email"
valign = 1

[node name="EmailInput" type="LineEdit" parent="Background/Form/Email"]
margin_left = 254.0
margin_right = 954.0
margin_bottom = 66.0
rect_min_size = Vector2( 700, 60 )
align = 1

[node name="Password" type="HBoxContainer" parent="Background/Form"]
margin_top = 70.0
margin_right = 954.0
margin_bottom = 136.0
rect_min_size = Vector2( 0, 60 )

[node name="PasswordLabel" type="Label" parent="Background/Form/Password"]
margin_right = 250.0
margin_bottom = 66.0
rect_min_size = Vector2( 250, 60 )
text = "Has≈Ço"
valign = 1

[node name="PasswordInput" type="LineEdit" parent="Background/Form/Password"]
margin_left = 254.0
margin_right = 954.0
margin_bottom = 66.0
rect_min_size = Vector2( 700, 60 )
align = 1
secret = true

[node name="LoginButton" type="Button" parent="Background"]
margin_left = 450.0
margin_top = 1200.0
margin_right = 750.0
margin_bottom = 1350.0
text = "Zaloguj"

[node name="Notification" type="RichTextLabel" parent="Background"]
margin_left = 309.0
margin_top = 1100.0
margin_right = 1009.0
margin_bottom = 1180.0

[connection signal="pressed" from="Background/LoginButton" to="." method="_on_LoginButton_pressed"]
